--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "url": "https://github.com/ImprobProbs/explorabilities.git"
   },
   "homepage": "https://github.com/ImprobProbs/explorabilities.git",
+  "scripts": {
+    "start": "webpack --config webpack.config.js --watch"
+  },
   "dependencies": {
+    "body-parser": "^1.16.0",
     "express": "^4.14.0"
   },
   "devDependencies": {
