--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack --config ./client/webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -15,12 +15,11 @@
     "url": "https://github.com/ImprobProbs/explorabilities.git"
   },
   "homepage": "https://github.com/ImprobProbs/explorabilities.git",
-  "scripts": {
-    "start": "webpack --config webpack.config.js --watch"
-  },
   "dependencies": {
     "body-parser": "^1.16.0",
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
   },
   "devDependencies": {
     "babel": "^6.5.2"
