--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "webpack --config ./client/webpack.config.js"
+    "build": "webpack --config ./webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -16,12 +16,14 @@
   },
   "homepage": "https://github.com/ImprobProbs/explorabilities.git",
   "dependencies": {
+    "babel-preset-react": "^6.22.0",
     "body-parser": "^1.16.0",
     "express": "^4.14.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   },
   "devDependencies": {
-    "babel": "^6.5.2"
+    "babel": "^6.5.2",
+    "babel-preset-es2015": "^6.22.0"
   }
 }
