--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build": "webpack --config ./webpack.config.js"
+    "build": "webpack --config webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -16,7 +16,6 @@
   },
   "homepage": "https://github.com/ImprobProbs/explorabilities.git",
   "dependencies": {
-    "babel-preset-react": "^6.22.0",
     "body-parser": "^1.16.0",
     "express": "^4.14.0",
     "react": "^15.4.2",
@@ -24,6 +23,10 @@
   },
   "devDependencies": {
     "babel": "^6.5.2",
-    "babel-preset-es2015": "^6.22.0"
+    "babel-core": "^6.22.1",
+    "babel-loader": "^6.2.10",
+    "babel-preset-react": "^6.22.0",
+    "babel-preset-es2015": "^6.22.0",
+    "webpack": "^1.14.0"
   }
 }
