--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "body-parser": "^1.16.0",
     "express": "^4.14.0",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "request": "^2.79.0"
   },
   "devDependencies": {
     "babel": "^6.5.2",
