--- a/package.json
+++ b/package.json
@@ -24,14 +24,16 @@
     "request": "^2.79.0"
   },
   "devDependencies": {
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-router": "^3.0.2",
     "babel": "^6.5.2",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
-    "babel-preset-react": "^6.22.0",
     "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.22.0",
+    "eslint": "^3.14.1",
+    "eslint-config-google": "^0.7.1",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-router": "^3.0.2",
     "webpack": "^1.14.0"
   }
 }
