--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcrypt": "^1.0.2",
     "body-parser": "^1.16.0",
     "express": "^4.14.0",
+    "jsonwebtoken": "^7.2.1",
     "request": "^2.79.0"
   },
   "devDependencies": {
