--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^1.16.0",
     "express": "^4.14.0",
     "jsonwebtoken": "^7.2.1",
+    "react-star-rating-component": "^1.2.2",
     "request": "^2.79.0"
   },
   "devDependencies": {
