--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "express": "^4.14.0",
     "jsonwebtoken": "^7.2.1",
     "react-star-rating-component": "^1.2.2",
-    "request": "^2.79.0"
+    "request": "^2.79.0",
+    "sequelize": "^3.30.1"
   },
   "devDependencies": {
     "babel": "^6.5.2",
